--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "chart.js": "^4.2.1",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "luxon": "^3.3.0",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0"
   },
