--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "chart.js": "^4.2.1",
-    "chartjs-adapter-luxon": "^1.3.1",
-    "luxon": "^3.3.0",
-    "vue": "^3.2.47",
-    "vue-chartjs": "^5.2.0"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
